BOARD18 1.1.2 Release Notes

Changes from 1.1.1 Release:

* Removed invalid error handling code from loadBox function in
  board18Map2.js and board18Market2.js.

* Removed invalid error handling code from loadSession function in
  board18Map2.js and board18Market2.js.

* Implemented issue 27 Phase 1 in newUser.php - Make first player level "admin".

BOARD18 1.1.1 Release Notes

Changes from 1.1.0 Release:

* Fixed bug 42 - Invalid backout of token delete.

* Fixed loadAllBoxes utility.

* Added BOARD18update utility.

* Updated BOARD18/website index.html file

BOARD18 1.1.0 Release Notes

Changes from 1.0.1 Release:

* Implemented issue 28 - Create a Checkpoint/Revert Function.

* Made some other minor aesthetic code upgrades.

BOARD18 1.0.1 Release Notes

Changes from 1.0.0 Release:

* Fixed issue 38 - Placement problem with token selection popup. 

BOARD18 1.0.0 Release Notes

Changes from 0.6.0 Release:

* Fixed issue 34 - Make all database changes to support pending 
  client side enhancements. 

* Fixed issue 31 - Game over enhancement. 

BOARD18 0.6.0 Release Notes

Changes from 0.5.0 Release:

* Fixed issue 33 - Support hexes in both orientations. 

* Fixed bug in the addJSONtoBox.php utility.

BOARD18 0.5.0 Release Notes

Changes from 0.4.0 Release:

* Fixed issue 21 - Allow players to view games that they are not playing. 

* Fixed bug in changePlayers.php

BOARD18 0.4.0 Release Notes

Changes from 0.3.1 Release:

* BOARD18 will now check every 2 minutes for updates made by other
  players and will reload the page if any are found.

* Added a new administrative utility to list all games in a database.

* Removed resizing of tokens and tiles on map and stock chart. [Issue 29]
  Uploaded graphics will no longer be resized so all graphics must 
  be sized exactly correctly. 

* Changed the second included game box from 1870-REP01 to 1870-REP02.

* Some minor changes to the "Login to BOARD18" form.

BOARD18 0.3.1 Release Notes

Changes from 0.3.0 Release:
