@@ -1,0 +1,39 @@
+<?php
+/*
+ * This is a dummy page which serves as a temporary filler. 
+ * 
+ * Copyright (c) 2015 Richard E. Price under the The MIT License.
+ * A copy of this license can be found in the LICENSE.text file.
+ */
+?>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>BOARD18 - Remote Play Tool For 18xx Style Games</title>
+    <link rel="shortcut icon" href="images/favicon.ico" >
+    <link rel="stylesheet" href="style/board18com.css" />
+  </head>
+  <body>
+    <div id="topofpage">
+      <div id="logo">
+        <img src="images/logo.png" alt="Logo"/> 
+      </div>
+      <div id="heading">
+        <h1>BOARD18 - Remote Play Tool For 18xx Style Games</h1>
+      </div>
+    </div>
+    <div id="leftofpage">
+    </div>
+    <div id="rightofpage"> 
+      <div id="content">
+        <p>
+          <span style="font-size: xx-large">
+            This is a dummy page.
+          </span><br>
+          The expected function has not yet been implemented. 
+        </p>
+      </div> 
+    </div>  
+  </body>
+</html>
