@@ -74,3 +74,8 @@
 }
 
 .reg { }
+
+#adminlevel {
+  display: none;
+  margin-left: 5px;
+}
