@@ -1,3 +1,11 @@
+BOARD18 1.1.3 Release Notes
+
+Changes from 1.1.2 Release:
+
+* Improved the snapshot functions added in 1.1.2.
+
+* Implemented issue 27 Phase 1 - board18Admin.php.
+
 BOARD18 1.1.2 Release Notes
 
 Changes from 1.1.1 Release:
